Add first recipes
Added first recipe for garlic shrimp pasta bake.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <p>
+            <a href="./recipes/garlic-shrimp-pasta-bake.html">
+                Garlic Shrimp Pasta Bake
+            </a>
+        </p>
     </body>
 </html>
