Add second recipe and fix minor typo in first
Added Quick Air Fryer Chicken Parmesan recipe in addition to fixing
a missing space in the ingredients of the first recipe.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <p>
-            <a href="./recipes/garlic-shrimp-pasta-bake.html">
-                Garlic Shrimp Pasta Bake
-            </a>
+        <ul>
+            <ol>
+                <a href="./recipes/garlic-shrimp-pasta-bake.html">Garlic Shrimp Pasta Bake</a>
+                <a href="./recipes/quick-air-fryer-chicken-parmesan.html">Quick Air Fryer Chicken Parmesan</a>
+            </ol>
+        </ul>
         </p>
     </body>
 </html>
