Add third recipe

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <ol>
                 <a href="./recipes/quick-air-fryer-chicken-parmesan.html">Quick Air Fryer Chicken Parmesan</a>
             </ol>
+            <ol>
+                <a href="./recipes/red-cocount-curry-with-shrimp.html">Red Coconut Curry with Shrimp</a>
+            </ol>
         </ul>
     </body>
 </html>
