--- a/recipes/garlic-shrimp-pasta-bake.html
+++ b/recipes/garlic-shrimp-pasta-bake.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Garlic Shrimp Pasta Bake</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Garlic Shrimp Pasta Bake</h1>
