--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>
             Odin Recipes
         </title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
