--- a/recipes/quick-air-fryer-chicken-parmesan.html
+++ b/recipes/quick-air-fryer-chicken-parmesan.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Quick Air Fryer Chicken Parmesan</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Quick Air Fryer Chicken Parmesan</h1>
