--- a/recipes/red-cocount-curry-with-shrimp.html
+++ b/recipes/red-cocount-curry-with-shrimp.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Red Coconut Curry with Shrimp</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Red Coconut Curry with Shrimp</h1>
